@@ -55,21 +55,21 @@ class Setting:
             "font_size": 15,
             "font_weight": "bold",
             "bar_gap": 2,
-            "font_color_track_clock": "#FFFFFF",
             "font_color_compass": "#FFFFFF",
-            "font_color_elevation": "#FFFFFF",
-            "font_color_odometer": "#FFFFFF",
-            "bkg_color_track_clock": "#222222",
             "bkg_color_compass": "#222222",
-            "bkg_color_elevation": "#222222",
-            "bkg_color_odometer": "#222222",
             "show_track_clock": True,
             "track_clock_time_scale": 1,
             "track_clock_format": "%H:%M %p",
-            "show_odometer": True,
-            "odometer_unit": "0",
+            "font_color_track_clock": "#FFFFFF",
+            "bkg_color_track_clock": "#222222",
             "show_elevation": True,
             "elevation_unit": "0",
+            "font_color_elevation": "#FFFFFF",
+            "bkg_color_elevation": "#222222",
+            "show_odometer": True,
+            "odometer_unit": "0",
+            "font_color_odometer": "#FFFFFF",
+            "bkg_color_odometer": "#222222",
             "meters_driven": 0,
         },
         "deltabest": {
@@ -103,12 +103,12 @@ class Setting:
             "font_size": 30,
             "font_weight": "bold",
             "font_color_activated": "#000000",
-            "font_color_allowed": "#000000",
-            "font_color_available": "#000000",
-            "font_color_not_available": "#000000",
             "bkg_color_activated": "#44FF00",
+            "font_color_allowed": "#000000",
             "bkg_color_allowed": "#FF4400",
+            "font_color_available": "#000000",
             "bkg_color_available": "#00CCFF",
+            "font_color_not_available": "#000000",
             "bkg_color_not_available": "#555555",
         },
         "engine": {
@@ -117,17 +117,29 @@ class Setting:
             "position_x": "933",
             "position_y": "526",
             "opacity": 0.9,
+            "layout": "0",
             "font_name": "consolas",
             "font_size": 15,
             "font_weight": "bold",
             "bar_gap": 2,
-            "font_color": "#FFFFFF",
-            "bkg_color": "#222222",
-            "bkg_color_overheat": "#FF2200",
+            "font_color_oil": "#FFFFFF",
+            "bkg_color_oil": "#222222",
+            "font_color_water": "#FFFFFF",
+            "bkg_color_water": "#222222",
             "overheat_threshold_oil": 110,
             "overheat_threshold_water": 110,
-            "show_turbo": True,
+            "bkg_color_overheat": "#FF2200",
+            "show_turbo_pressure": True,
+            "turbo_pressure_unit": "0",
+            "font_color_turbo": "#FFFFFF",
+            "bkg_color_turbo": "#222222",
             "show_rpm": True,
+            "font_color_rpm": "#FFFFFF",
+            "bkg_color_rpm": "#222222",
+            "column_index_oil": 1,
+            "column_index_water": 2,
+            "column_index_turbo": 3,
+            "column_index_rpm": 4,
         },
         "force": {
             "enable": True,
@@ -530,11 +542,11 @@ class Setting:
             "prefix_last": "L ",
             "prefix_current": "C ",
             "prefix_estimated": "E ",
-            "column_index_session_best": 0,
-            "column_index_best": 1,
-            "column_index_last": 2,
-            "column_index_current": 3,
-            "column_index_estimated": 4,
+            "column_index_session_best": 1,
+            "column_index_best": 2,
+            "column_index_last": 3,
+            "column_index_current": 4,
+            "column_index_estimated": 5,
         },
         "wear": {
             "enable": True,
